Move to WSL and add some experiments

--- a/src/python/examples/ogc_api_features_analysis/langchain_version.ipynb
+++ b/src/python/examples/ogc_api_features_analysis/langchain_version.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Document(page_content='{\"FKB Tiltak (DEMO)\": {\"type\": \"application/json\", \"href\": \"https://alenos-tester001.azurewebsites.net/collections?f=json\", \"description\": \"A API endpoint with JSON response which conforms to the OGC API Features standard. This is a it contains a list of collections.\", \"links\": [{\"type\": \"application/yaml\", \"title\": \"Schema definition for Collections in OGC API Features\", \"href\": \"https://schemas.opengis.net/ogcapi/features/part1/1.0/openapi/schemas/collections.yaml\"}]}}', metadata={'source': '/mnt/c/Users/oskar/master/src/python/examples/ogc_api_features_analysis/endpoints.json', 'seq_num': 1})]"
+       "[Document(page_content='{\"FKB Tiltak (DEMO)\": {\"type\": \"application/json\", \"href\": \"https://alenos-tester001.azurewebsites.net/collections?f=json\", \"description\": \"A API endpoint with JSON response which conforms to the OGC API Features standard. This is a it contains a list of collections.\", \"links\": [{\"type\": \"application/yaml\", \"title\": \"Schema definition for Collections in OGC API Features\", \"href\": \"https://schemas.opengis.net/ogcapi/features/part1/1.0/openapi/schemas/collections.yaml\"}]}}', metadata={'source': '/home/oskar/dev/prosjektoppgave/src/python/examples/ogc_api_features_analysis/endpoints.json', 'seq_num': 1})]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,33 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{\n",
-       "  input: RunnableLambda(...),\n",
-       "  agent_scratchpad: RunnableLambda(...)\n",
-       "}\n",
-       "| ChatPromptTemplate(input_variables=['agent_scratchpad', 'input'], input_types={'agent_scratchpad': typing.List[typing.Union[langchain_core.messages.ai.AIMessage, langchain_core.messages.human.HumanMessage, langchain_core.messages.chat.ChatMessage, langchain_core.messages.system.SystemMessage, langchain_core.messages.function.FunctionMessage, langchain_core.messages.tool.ToolMessage]]}, messages=[SystemMessagePromptTemplate(prompt=PromptTemplate(input_variables=[], template='You are very powerful assistant GIS assistant.')), HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=['input'], template='{input}')), MessagesPlaceholder(variable_name='agent_scratchpad')])\n",
-       "| RunnableBinding(bound=ChatOpenAI(client=<openai.resources.chat.completions.Completions object at 0x7f8ff95bd510>, async_client=<openai.resources.chat.completions.AsyncCompletions object at 0x7f8ff95db850>, temperature=0.0, openai_api_key='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', openai_proxy=''), kwargs={'functions': [{'name': 'make_http_request', 'description': 'make_http_request(url: str) -> str - Makes a HTTP reuqest to the specified URL, and returns the result as a string.', 'parameters': {'title': 'make_http_requestSchemaSchema', 'type': 'object', 'properties': {'url': {'title': 'Url', 'type': 'string'}}, 'required': ['url']}}]})\n",
-       "| OpenAIFunctionsAgentOutputParser()"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "agent"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -169,13 +143,7 @@
      "text": [
       "\n",
       "\n",
-      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
       "\u001b[32;1m\u001b[1;3m\n",
       "Invoking: `make_http_request` with `{'url': 'https://alenos-tester001.azurewebsites.net/collections?f=json'}`\n",
       "\n",
@@ -608,9 +576,13 @@
       "1. id: The unique identifier of the collection.\n",
       "2. title: The title or name of the collection.\n",
       "3. description: A brief description of the collection.\n",
-      "4. keywords: Keywords associated with the collection.\n",
-      "5. links: An array of links related to the collection. Each link has properties like type, rel, title, and href.\n",
-      "6. extent: The spatial and temporal extent of the collection.\n",
+      "4. keywords: An array of keywords associated with the collection.\n",
+      "5. links: An array of links related to the collection. Each link has the following properties:\n",
+      "   - type: The type of the link.\n",
+      "   - rel: The relationship of the link to the collection.\n",
+      "   - title: The title or description of the link.\n",
+      "   - href: The URL of the link.\n",
+      "6. extent: The spatial and temporal extent of the collection. The spatial extent is defined by a bounding box (bbox) and a coordinate reference system (crs). The temporal extent is defined by an interval and a temporal reference system (trs).\n",
       "7. itemType: The type of items in the collection.\n",
       "\n",
       "The JSON document also contains links to retrieve the document itself in different formats (JSON, RDF, HTML).\u001b[0m\n",
@@ -621,12 +593,11 @@
     {
      "data": {
       "text/plain": [
-       "{'input2': 'how are you?',\n",
-       " 'input': 'explain the content at https://alenos-tester001.azurewebsites.net/collections?f=json',\n",
-       " 'output': 'The content at https://alenos-tester001.azurewebsites.net/collections?f=json is a JSON document that contains information about different collections. Each collection has the following properties:\\n\\n1. id: The unique identifier of the collection.\\n2. title: The title or name of the collection.\\n3. description: A brief description of the collection.\\n4. keywords: Keywords associated with the collection.\\n5. links: An array of links related to the collection. Each link has properties like type, rel, title, and href.\\n6. extent: The spatial and temporal extent of the collection.\\n7. itemType: The type of items in the collection.\\n\\nThe JSON document also contains links to retrieve the document itself in different formats (JSON, RDF, HTML).'}"
+       "{'input': 'explain the content at https://alenos-tester001.azurewebsites.net/collections?f=json',\n",
+       " 'output': 'The content at https://alenos-tester001.azurewebsites.net/collections?f=json is a JSON document that contains information about different collections. Each collection has the following properties:\\n\\n1. id: The unique identifier of the collection.\\n2. title: The title or name of the collection.\\n3. description: A brief description of the collection.\\n4. keywords: An array of keywords associated with the collection.\\n5. links: An array of links related to the collection. Each link has the following properties:\\n   - type: The type of the link.\\n   - rel: The relationship of the link to the collection.\\n   - title: The title or description of the link.\\n   - href: The URL of the link.\\n6. extent: The spatial and temporal extent of the collection. The spatial extent is defined by a bounding box (bbox) and a coordinate reference system (crs). The temporal extent is defined by an interval and a temporal reference system (trs).\\n7. itemType: The type of items in the collection.\\n\\nThe JSON document also contains links to retrieve the document itself in different formats (JSON, RDF, HTML).'}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
