Perform experiments on different file types

--- a/tex/bib/bibliography.bib
+++ b/tex/bib/bibliography.bib
@@ -290,6 +290,17 @@
   file = {C:\Users\oskar\Zotero\storage\WFE96NJI\Hughes - 1994 - Technological momentum.pdf}
 }
 
+@misc{hulbertExploringChatGPTCode2023,
+  title = {Exploring {{ChatGPT Code Interpreter}}},
+  author = {Hulbert, Dave},
+  year = {2023},
+  month = aug,
+  journal = {Medium},
+  urldate = {2023-12-03},
+  abstract = {ChatGPT Code Interpreter is more than just a Python tool. With a bit of exploration, it can run JavaScript, PHP, process videos and more.},
+  langid = {english}
+}
+
 @misc{huLoRALowRankAdaptation2021,
   title = {{{LoRA}}: {{Low-Rank Adaptation}} of {{Large Language Models}}},
   shorttitle = {{{LoRA}}},
