--- a/tex/main.tex
+++ b/tex/main.tex
@@ -48,10 +48,10 @@
 \usepackage{afterpage}
 
 % nicer table dividers á la MIT Press; the package booktabs provides a similar option
-%\usepackage{booktabs}
-\newcommand\tabletop{\hline\noalign{\smallskip}}
-\newcommand\tablemid{\noalign{\smallskip}\hline\noalign{\smallskip}}
-\newcommand\tablebot{\noalign{\smallskip}\hline}
+\usepackage{booktabs}
+% \newcommand\tabletop{\hline\noalign{\smallskip}}
+% \newcommand\tablemid{\noalign{\smallskip}\hline\noalign{\smallskip}}
+% \newcommand\tablebot{\noalign{\smallskip}\hline}
 
 % only needed if you want to pgfplots to draw figures
 \usepackage{tikzsymbols}
