Add stuff from TDT13 and download chat images

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -64,7 +64,7 @@
 \usepackage{doi}
 \usepackage{hyperref}
 \definecolor{darkblue}{rgb}{0, 0, 0.5}
-\hypersetup{colorlinks=true,citecolor=darkblue, linkcolor=darkblue, urlcolor=darkblue}
+\hypersetup{colorlinks=true,citecolor=black, linkcolor=black, urlcolor=darkblue}
 \usepackage[nameinlink]{cleveref}
 
 % Code stuff
