Add GIS related work stuff

--- a/tex/frontmatter/glossary.tex
+++ b/tex/frontmatter/glossary.tex
@@ -55,3 +55,4 @@
 \newacronym{acr:rnn}{RNN}{Recurrent Neural Network}
 \newacronym{acr:nsp}{NSP}{Next Sentence Prediction}
 \newacronym{acr:mlm}{MLM}{Masked Language Modelling}
+\newacronym{acr:osm}{OSM}{OpenStreetMap}
