--- a/tex/main.tex
+++ b/tex/main.tex
@@ -86,6 +86,10 @@
     columns=flexible
 }
 
+\lstdefinestyle{python}{
+    language=Python, breaklines=True, 
+}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % comments and notes, useful while working on a draft - change the option 'draft' to 'disable' in the final version
 \setlength{\marginparwidth}{2cm}
@@ -273,17 +277,9 @@ acronym] 				% create a list of abbreviations
 
 \include{chapters/introduction}
 \include{chapters/theory}
-% \include{chapters/related_work}
-% \include{chapters/data}
-% \include{chapters/architecture}
 \include{chapters/experiments}
 \include{chapters/discussion}
 \include{chapters/conclusion}
-% \input{chapters/introduction}
-% \input{chapters/theory}
-% \input{chapters/experiments}
-% \input{chapters/discussion}
-% \input{chapters/conclusion}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\backmatter
