Add related GIS/LLM work

--- a/tex/bib/bibliography.bib
+++ b/tex/bib/bibliography.bib
@@ -86,6 +86,16 @@
   file = {C:\Users\oskar\Zotero\storage\TUXR534A\Coetzee et al. - 2020 - Open Geospatial Software and Data A Review of the.pdf}
 }
 
+@misc{datatilsynetGeneralDataProtection,
+  title = {General {{Data Protection Regulation}}},
+  author = {{Datatilsynet}},
+  journal = {Datatilsynet},
+  urldate = {2023-12-05},
+  howpublished = {https://www.datatilsynet.no/en/regulations-and-tools/regulations/},
+  langid = {english},
+  file = {C:\Users\oskar\Zotero\storage\MM6JTID7\regulations.html}
+}
+
 @misc{dengK2FoundationLanguage2023,
   title = {K2: {{A Foundation Language Model}} for {{Geoscience Knowledge Understanding}} and {{Utilization}}},
   shorttitle = {K2},
@@ -169,6 +179,20 @@
   archiveprefix = {arxiv},
   keywords = {Computer Science - Software Engineering},
   file = {C\:\\Users\\oskar\\Zotero\\storage\\6TMJQ6P2\\Fan et al. - 2023 - Large Language Models for Software Engineering Su.pdf;C\:\\Users\\oskar\\Zotero\\storage\\ZBKRCYEV\\2310.html}
+}
+
+@inproceedings{gamanReportVarDialEvaluation2020,
+  title = {A {{Report}} on the {{VarDial Evaluation Campaign}} 2020},
+  booktitle = {Proceedings of the 7th {{Workshop}} on {{NLP}} for {{Similar Languages}}, {{Varieties}} and {{Dialects}}},
+  author = {Gaman, Mihaela and Hovy, Dirk and Ionescu, Radu Tudor and Jauhiainen, Heidi and Jauhiainen, Tommi and Lind{\'e}n, Krister and Ljube{\v s}i{\'c}, Nikola and Partanen, Niko and Purschke, Christoph and Scherrer, Yves and Zampieri, Marcos},
+  year = {2020},
+  month = dec,
+  pages = {1--14},
+  publisher = {{International Committee on Computational Linguistics (ICCL)}},
+  address = {{Barcelona, Spain (Online)}},
+  urldate = {2023-10-16},
+  abstract = {This paper presents the results of the VarDial Evaluation Campaign 2020 organized as part of the seventh workshop on Natural Language Processing (NLP) for Similar Languages, Varieties and Dialects (VarDial), co-located with COLING 2020. The campaign included three shared tasks each focusing on a different challenge of language and dialect identification: Romanian Dialect Identification (RDI), Social Media Variety Geolocation (SMG), and Uralic Language Identification (ULI). The campaign attracted 30 teams who enrolled to participate in one or multiple shared tasks and 14 of them submitted runs across the three shared tasks. Finally, 11 papers describing participating systems are published in the VarDial proceedings and referred to in this report.},
+  file = {C:\Users\oskar\Zotero\storage\8UCGMNYC\Gaman et al. - 2020 - A Report on the VarDial Evaluation Campaign 2020.pdf}
 }
 
 @misc{guoRetrievalaugmentedGPT35based2023,
@@ -830,6 +854,21 @@
   archiveprefix = {arxiv},
   keywords = {Computer Science - Computation and Language},
   file = {C\:\\Users\\oskar\\Zotero\\storage\\HG5BUPY7\\Rozière et al. - 2023 - Code Llama Open Foundation Models for Code.pdf;C\:\\Users\\oskar\\Zotero\\storage\\XF7M2VMP\\2308.html}
+}
+
+@inproceedings{scherrerHeLjuVarDial20202020,
+  title = {{{HeLju}}@{{VarDial}} 2020: {{Social Media Variety Geolocation}} with {{BERT Models}}},
+  shorttitle = {{{HeLju}}@{{VarDial}} 2020},
+  booktitle = {Proceedings of the 7th {{Workshop}} on {{NLP}} for {{Similar Languages}}, {{Varieties}} and {{Dialects}}},
+  author = {Scherrer, Yves and Ljube{\v s}i{\'c}, Nikola},
+  year = {2020},
+  month = dec,
+  pages = {202--211},
+  publisher = {{International Committee on Computational Linguistics (ICCL)}},
+  address = {{Barcelona, Spain (Online)}},
+  urldate = {2023-10-16},
+  abstract = {This paper describes the Helsinki-Ljubljana contribution to the VarDial shared task on social media variety geolocation. Our solutions are based on the BERT Transformer models, the constrained versions of our models reaching 1st place in two subtasks and 3rd place in one subtask, while our unconstrained models outperform all the constrained systems by a large margin. We show in our analyses that Transformer-based models outperform traditional models by far, and that improvements obtained by pre-training models on large quantities of (mostly standard) text are significant, but not drastic, with single-language models also outperforming multilingual models. Our manual analysis shows that two types of signals are the most crucial for a (mis)prediction: named entities and dialectal features, both of which are handled well by our models.},
+  file = {C:\Users\oskar\Zotero\storage\SXY6K8F7\Scherrer and Ljubešić - 2020 - HeLju@VarDial 2020 Social Media Variety Geolocati.pdf}
 }
 
 @article{sheppardGISSocietyResearch1995,
