--- a/tex/frontmatter/glossary.tex
+++ b/tex/frontmatter/glossary.tex
@@ -56,3 +56,4 @@
 \newacronym{acr:nsp}{NSP}{Next Sentence Prediction}
 \newacronym{acr:mlm}{MLM}{Masked Language Modelling}
 \newacronym{acr:osm}{OSM}{OpenStreetMap}
+\newacronym{acr:gdpr}{GDPR}{General Data Protection Regulation}
