--- a/tex/main.tex
+++ b/tex/main.tex
@@ -277,6 +277,7 @@ acronym] 				% create a list of abbreviations
 
 \include{chapters/introduction}
 \include{chapters/theory}
+\include{chapters/related_work}
 \include{chapters/experiments}
 \include{chapters/discussion}
 \include{chapters/conclusion}
