--- a/tex/frontmatter/glossary.tex
+++ b/tex/frontmatter/glossary.tex
@@ -57,3 +57,6 @@
 \newacronym{acr:mlm}{MLM}{Masked Language Modelling}
 \newacronym{acr:osm}{OSM}{OpenStreetMap}
 \newacronym{acr:gdpr}{GDPR}{General Data Protection Regulation}
+\newacronym{acr:rlhf}{RLHF}{Reinforcement Learning from Human Feedback}
+\newacronym{acr:ppo}{PPO}{Proximal Policy Optimization}
+\newacronym{acr:gan}{GAN}{Generative Adverserial Network}
