--- a/tex/main.tex
+++ b/tex/main.tex
@@ -254,11 +254,11 @@ acronym] 				% create a list of abbreviations
 \addcontentsline{toc}{chapter}{Abstract}    % can be left out
 \include{frontmatter/abstract}
 
-\addcontentsline{toc}{chapter}{Sammendrag}  % can be left out
-\include{frontmatter/sammendrag}
+% \addcontentsline{toc}{chapter}{Sammendrag}  % can be left out
+% \include{frontmatter/sammendrag}
 
-\addcontentsline{toc}{chapter}{Preface}     % can be left out
-\include{frontmatter/preface}
+% \addcontentsline{toc}{chapter}{Preface}     % can be left out
+% \include{frontmatter/preface}
 
 \clearpage
 
