--- a/tex/bib/bibliography.bib
+++ b/tex/bib/bibliography.bib
@@ -212,6 +212,24 @@
   file = {C:\Users\oskar\Zotero\storage\8UCGMNYC\Gaman et al. - 2020 - A Report on the VarDial Evaluation Campaign 2020.pdf}
 }
 
+@inproceedings{gramackiSRAIStandardizationGeospatial2023,
+  title = {{{SRAI}}: {{Towards Standardization}} of {{Geospatial AI}}},
+  shorttitle = {{{SRAI}}},
+  booktitle = {Proceedings of the 6th {{ACM SIGSPATIAL International Workshop}} on {{AI}} for {{Geographic Knowledge Discovery}}},
+  author = {Gramacki, Piotr and Le{\'s}niara, Kacper and Raczycki, Kamil and Wo{\'z}niak, Szymon and Przymus, Marcin and Szyma{\'n}ski, Piotr},
+  year = {2023},
+  month = nov,
+  eprint = {2310.13098},
+  primaryclass = {cs},
+  pages = {43--52},
+  doi = {10.1145/3615886.3627740},
+  urldate = {2023-12-06},
+  abstract = {Spatial Representations for Artificial Intelligence (srai) is a Python library for working with geospatial data. The library can download geospatial data, split a given area into micro-regions using multiple algorithms and train an embedding model using various architectures. It includes baseline models as well as more complex methods from published works. Those capabilities make it possible to use srai in a complete pipeline for geospatial task solving. The proposed library is the first step to standardize the geospatial AI domain toolset. It is fully open-source and published under Apache 2.0 licence.},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Machine Learning},
+  file = {C\:\\Users\\oskar\\Zotero\\storage\\YPMEFUCI\\Gramacki et al. - 2023 - SRAI Towards Standardization of Geospatial AI.pdf;C\:\\Users\\oskar\\Zotero\\storage\\FFH2L2AJ\\2310.html}
+}
+
 @misc{guoRetrievalaugmentedGPT35based2023,
   title = {Retrieval-Augmented {{GPT-3}}.5-Based {{Text-to-SQL Framework}} with {{Sample-aware Prompting}} and {{Dynamic Revision Chain}}},
   author = {Guo, Chunxi and Tian, Zhiliang and Tang, Jintao and Li, Shasha and Wen, Zhihua and Wang, Kaixuan and Wang, Ting},
