--- a/tex/bib/bibliography.bib
+++ b/tex/bib/bibliography.bib
@@ -1,3 +1,33 @@
+@misc{aiMistral7B2023,
+  title = {Mistral {{7B}}},
+  author = {AI, Mistral},
+  year = {2023},
+  month = sep,
+  urldate = {2023-12-07},
+  abstract = {The best 7B model to date, Apache 2.0},
+  chapter = {news},
+  howpublished = {https://mistral.ai/news/announcing-mistral-7b/},
+  langid = {american},
+  file = {C:\Users\oskar\Zotero\storage\4VXGY5JH\announcing-mistral-7b.html}
+}
+
+@misc{anilPaLMTechnicalReport2023,
+  title = {{{PaLM}} 2 {{Technical Report}}},
+  author = {Anil, Rohan and Dai, Andrew M. and Firat, Orhan and Johnson, Melvin and Lepikhin, Dmitry and Passos, Alexandre and Shakeri, Siamak and Taropa, Emanuel and Bailey, Paige and Chen, Zhifeng and Chu, Eric and Clark, Jonathan H. and Shafey, Laurent El and Huang, Yanping and {Meier-Hellstern}, Kathy and Mishra, Gaurav and Moreira, Erica and Omernick, Mark and Robinson, Kevin and Ruder, Sebastian and Tay, Yi and Xiao, Kefan and Xu, Yuanzhong and Zhang, Yujing and Abrego, Gustavo Hernandez and Ahn, Junwhan and Austin, Jacob and Barham, Paul and Botha, Jan and Bradbury, James and Brahma, Siddhartha and Brooks, Kevin and Catasta, Michele and Cheng, Yong and Cherry, Colin and {Choquette-Choo}, Christopher A. and Chowdhery, Aakanksha and Crepy, Cl{\'e}ment and Dave, Shachi and Dehghani, Mostafa and Dev, Sunipa and Devlin, Jacob and D{\'i}az, Mark and Du, Nan and Dyer, Ethan and Feinberg, Vlad and Feng, Fangxiaoyu and Fienber, Vlad and Freitag, Markus and Garcia, Xavier and Gehrmann, Sebastian and Gonzalez, Lucas and {Gur-Ari}, Guy and Hand, Steven and Hashemi, Hadi and Hou, Le and Howland, Joshua and Hu, Andrea and Hui, Jeffrey and Hurwitz, Jeremy and Isard, Michael and Ittycheriah, Abe and Jagielski, Matthew and Jia, Wenhao and Kenealy, Kathleen and Krikun, Maxim and Kudugunta, Sneha and Lan, Chang and Lee, Katherine and Lee, Benjamin and Li, Eric and Li, Music and Li, Wei and Li, YaGuang and Li, Jian and Lim, Hyeontaek and Lin, Hanzhao and Liu, Zhongtao and Liu, Frederick and Maggioni, Marcello and Mahendru, Aroma and Maynez, Joshua and Misra, Vedant and Moussalem, Maysam and Nado, Zachary and Nham, John and Ni, Eric and Nystrom, Andrew and Parrish, Alicia and Pellat, Marie and Polacek, Martin and Polozov, Alex and Pope, Reiner and Qiao, Siyuan and Reif, Emily and Richter, Bryan and Riley, Parker and Ros, Alex Castro and Roy, Aurko and Saeta, Brennan and Samuel, Rajkumar and Shelby, Renee and Slone, Ambrose and Smilkov, Daniel and So, David R. and Sohn, Daniel and Tokumine, Simon and Valter, Dasha and Vasudevan, Vijay and Vodrahalli, Kiran and Wang, Xuezhi and Wang, Pidong and Wang, Zirui and Wang, Tao and Wieting, John and Wu, Yuhuai and Xu, Kelvin and Xu, Yunhan and Xue, Linting and Yin, Pengcheng and Yu, Jiahui and Zhang, Qiao and Zheng, Steven and Zheng, Ce and Zhou, Weikang and Zhou, Denny and Petrov, Slav and Wu, Yonghui},
+  year = {2023},
+  month = sep,
+  number = {arXiv:2305.10403},
+  eprint = {2305.10403},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  doi = {10.48550/arXiv.2305.10403},
+  urldate = {2023-12-07},
+  abstract = {We introduce PaLM 2, a new state-of-the-art language model that has better multilingual and reasoning capabilities and is more compute-efficient than its predecessor PaLM. PaLM 2 is a Transformer-based model trained using a mixture of objectives. Through extensive evaluations on English and multilingual language, and reasoning tasks, we demonstrate that PaLM 2 has significantly improved quality on downstream tasks across different model sizes, while simultaneously exhibiting faster and more efficient inference compared to PaLM. This improved efficiency enables broader deployment while also allowing the model to respond faster, for a more natural pace of interaction. PaLM 2 demonstrates robust reasoning capabilities exemplified by large improvements over PaLM on BIG-Bench and other reasoning tasks. PaLM 2 exhibits stable performance on a suite of responsible AI evaluations, and enables inference-time control over toxicity without additional overhead or impact on other capabilities. Overall, PaLM 2 achieves state-of-the-art performance across a diverse set of tasks and capabilities. When discussing the PaLM 2 family, it is important to distinguish between pre-trained models (of various sizes), fine-tuned variants of these models, and the user-facing products that use these models. In particular, user-facing products typically include additional pre- and post-processing steps. Additionally, the underlying models may evolve over time. Therefore, one should not expect the performance of user-facing products to exactly match the results reported in this report.},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language},
+  file = {C\:\\Users\\oskar\\Zotero\\storage\\Y7J6HBIJ\\Anil et al. - 2023 - PaLM 2 Technical Report.pdf;C\:\\Users\\oskar\\Zotero\\storage\\QMQKS6A2\\2305.html}
+}
+
 @misc{bastianLargeLanguageModels2023,
   title = {Large Language Models Are Powerful Imitators, but Not Innovators},
   author = {Bastian, Matthias},
@@ -23,6 +53,18 @@
   langid = {english},
   keywords = {climate change,e-government,geospatial standardization process,national SDI,OGC API,published full paper,testbed platform},
   file = {C:\Users\oskar\Zotero\storage\GVU3CC45\Blanc et al. - OGC API state of play a practical testbed for the.pdf}
+}
+
+@article{brownEstimateUpperBound1992,
+  title = {An {{Estimate}} of an {{Upper Bound}} for the {{Entropy}} of {{English}}},
+  author = {Brown, Peter F. and Della Pietra, Stephen A. and Della Pietra, Vincent J. and Lai, Jennifer C. and Mercer, Robert L.},
+  year = {1992},
+  journal = {Computational Linguistics},
+  volume = {18},
+  number = {1},
+  pages = {31--40},
+  urldate = {2023-12-07},
+  file = {C:\Users\oskar\Zotero\storage\AUAZZCJG\Brown et al. - 1992 - An Estimate of an Upper Bound for the Entropy of E.pdf}
 }
 
 @techreport{cannataOpenGeospatialStandards2023,
@@ -212,6 +254,15 @@
   file = {C:\Users\oskar\Zotero\storage\8UCGMNYC\Gaman et al. - 2020 - A Report on the VarDial Evaluation Campaign 2020.pdf}
 }
 
+@techreport{geminiteamGeminiFamilyHighly2023,
+  title = {Gemini: {{A Family}} of {{Highly Capable Multimodal Models}}},
+  author = {{Gemini Team} and {Google}},
+  year = {2023},
+  month = dec,
+  urldate = {2023-12-07},
+  file = {C:\Users\oskar\Zotero\storage\9EWCSJ9W\gemini_1_report.pdf}
+}
+
 @inproceedings{gramackiSRAIStandardizationGeospatial2023,
   title = {{{SRAI}}: {{Towards Standardization}} of {{Geospatial AI}}},
   shorttitle = {{{SRAI}}},
@@ -376,6 +427,22 @@
   archiveprefix = {arxiv},
   keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language,Computer Science - Machine Learning},
   file = {C\:\\Users\\oskar\\Zotero\\storage\\FBDIM7D6\\Hu et al. - 2021 - LoRA Low-Rank Adaptation of Large Language Models.pdf;C\:\\Users\\oskar\\Zotero\\storage\\HPY45HFE\\2106.html}
+}
+
+@article{jelinekPerplexityMeasureDifficulty2005,
+  title = {Perplexity{\textemdash}a Measure of the Difficulty of Speech Recognition Tasks},
+  author = {Jelinek, F. and Mercer, R. L. and Bahl, L. R. and Baker, J. K.},
+  year = {2005},
+  month = aug,
+  journal = {The Journal of the Acoustical Society of America},
+  volume = {62},
+  number = {S1},
+  pages = {S63},
+  issn = {0001-4966},
+  doi = {10.1121/1.2016299},
+  urldate = {2023-12-07},
+  abstract = {Using counterexamples, we show that vocabulary size and static and dynamic branching factors are all inadequate as measures of speech recognition complexity of finite state grammars. Information theoretic arguments show that perplexity (the logarithm of which is the familiar entropy) is a more appropriate measure of equivalent choice. It too has certain weaknesses which we discuss. We show that perplexity can also be applied to languages having no obvious statistical description, since an entropy-maximizing probability assignment can be found for any finite-state grammar. Table I shows perplexity values for some well-known speech recognition tasks. Perplexity Vocabulary Dynamic Phone Word size branching factorIBM-Lasers 2.14 21.11 1000 1000IBM-Raleigh 1.69 7.74 250 7.32CMU-AIX05 1.52 6.41 1011 35},
+  file = {C\:\\Users\\oskar\\Zotero\\storage\\GYCBF4NK\\Jelinek et al. - 2005 - Perplexity—a measure of the difficulty of speech r.pdf;C\:\\Users\\oskar\\Zotero\\storage\\7J7I8QB2\\Perplexity-a-measure-of-the-difficulty-of-speech.html}
 }
 
 @misc{jiangActiveRetrievalAugmented2023,
@@ -782,6 +849,20 @@
   file = {C\:\\Users\\oskar\\Zotero\\storage\\7Z453WF5\\Peng et al. - 2023 - Instruction Tuning with GPT-4.pdf;C\:\\Users\\oskar\\Zotero\\storage\\NXD74743\\2304.html}
 }
 
+@misc{pichaiIntroducingGeminiOur2023,
+  title = {Introducing {{Gemini}}: Our Largest and Most Capable {{AI}} Model},
+  shorttitle = {Introducing {{Gemini}}},
+  author = {Pichai, Sundar and Hassabis, Demis},
+  year = {2023},
+  month = dec,
+  journal = {Google},
+  urldate = {2023-12-07},
+  abstract = {Gemini is our most capable and general model, built to be multimodal and optimized for three different sizes: Ultra, Pro and Nano.},
+  howpublished = {https://blog.google/technology/ai/google-gemini-ai/},
+  langid = {american},
+  file = {C:\Users\oskar\Zotero\storage\9KY4QCRJ\google-gemini-ai.html}
+}
+
 @misc{qiMaaSDBSpatialDatabases2023,
   title = {{{MaaSDB}}: {{Spatial Databases}} in the {{Era}} of {{Large Language Models}} ({{Vision Paper}})},
   shorttitle = {{{MaaSDB}}},
@@ -1054,6 +1135,23 @@
   file = {C\:\\Users\\oskar\\Zotero\\storage\\VRDRSGTA\\Sun et al. - 2023 - Exploring the impact of low-rank adaptation on the.pdf;C\:\\Users\\oskar\\Zotero\\storage\\TLSXWYT4\\2309.html}
 }
 
+@misc{tangScienceDetectingLLMGenerated2023,
+  title = {The {{Science}} of {{Detecting LLM-Generated Texts}}},
+  author = {Tang, Ruixiang and Chuang, Yu-Neng and Hu, Xia},
+  year = {2023},
+  month = jun,
+  number = {arXiv:2303.07205},
+  eprint = {2303.07205},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  doi = {10.48550/arXiv.2303.07205},
+  urldate = {2023-12-07},
+  abstract = {The emergence of large language models (LLMs) has resulted in the production of LLM-generated texts that is highly sophisticated and almost indistinguishable from texts written by humans. However, this has also sparked concerns about the potential misuse of such texts, such as spreading misinformation and causing disruptions in the education system. Although many detection approaches have been proposed, a comprehensive understanding of the achievements and challenges is still lacking. This survey aims to provide an overview of existing LLM-generated text detection techniques and enhance the control and regulation of language generation models. Furthermore, we emphasize crucial considerations for future research, including the development of comprehensive evaluation metrics and the threat posed by open-source LLMs, to drive progress in the area of LLM-generated text detection.},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language},
+  file = {C\:\\Users\\oskar\\Zotero\\storage\\55K4LBCX\\Tang et al. - 2023 - The Science of Detecting LLM-Generated Texts.pdf;C\:\\Users\\oskar\\Zotero\\storage\\V75SUKWY\\2303.html}
+}
+
 @techreport{taoriAlpacaStrongReplicable,
   title = {Alpaca: {{A Strong}}, {{Replicable Instruction-Following Model}}},
   author = {Taori, Rohan and Gulrajani, Ishaan and Zhang, Tianyi and Dubois, Yann and Li, Xuechen and Guestrin, Carlos and Liang, Percy and Hashimoto, Tatasunori B.},
@@ -1113,7 +1211,7 @@
   file = {C\:\\Users\\oskar\\Zotero\\storage\\AXUZ3EUN\\Touvron et al. - 2023 - LLaMA Open and Efficient Foundation Language Mode.pdf;C\:\\Users\\oskar\\Zotero\\storage\\IKGGGZUG\\2302.html}
 }
 
-@misc{touvronLlamaOpenFoundation2023,
+@misc{touvronLlamaOpenFoundation2023a,
   title = {Llama 2: {{Open Foundation}} and {{Fine-Tuned Chat Models}}},
   shorttitle = {Llama 2},
   author = {Touvron, Hugo and Martin, Louis and Stone, Kevin and Albert, Peter and Almahairi, Amjad and Babaei, Yasmine and Bashlykov, Nikolay and Batra, Soumya and Bhargava, Prajjwal and Bhosale, Shruti and Bikel, Dan and Blecher, Lukas and Ferrer, Cristian Canton and Chen, Moya and Cucurull, Guillem and Esiobu, David and Fernandes, Jude and Fu, Jeremy and Fu, Wenyin and Fuller, Brian and Gao, Cynthia and Goswami, Vedanuj and Goyal, Naman and Hartshorn, Anthony and Hosseini, Saghar and Hou, Rui and Inan, Hakan and Kardas, Marcin and Kerkez, Viktor and Khabsa, Madian and Kloumann, Isabel and Korenev, Artem and Koura, Punit Singh and Lachaux, Marie-Anne and Lavril, Thibaut and Lee, Jenya and Liskovich, Diana and Lu, Yinghai and Mao, Yuning and Martinet, Xavier and Mihaylov, Todor and Mishra, Pushkar and Molybog, Igor and Nie, Yixin and Poulton, Andrew and Reizenstein, Jeremy and Rungta, Rashi and Saladi, Kalyan and Schelten, Alan and Silva, Ruan and Smith, Eric Michael and Subramanian, Ranjan and Tan, Xiaoqing Ellen and Tang, Binh and Taylor, Ross and Williams, Adina and Kuan, Jian Xiang and Xu, Puxin and Yan, Zheng and Zarov, Iliyan and Zhang, Yuchen and Fan, Angela and Kambadur, Melanie and Narang, Sharan and Rodriguez, Aurelien and Stojnic, Robert and Edunov, Sergey and Scialom, Thomas},
@@ -1124,11 +1222,11 @@
   primaryclass = {cs},
   publisher = {{arXiv}},
   doi = {10.48550/arXiv.2307.09288},
-  urldate = {2023-10-09},
+  urldate = {2023-12-07},
   abstract = {In this work, we develop and release Llama 2, a collection of pretrained and fine-tuned large language models (LLMs) ranging in scale from 7 billion to 70 billion parameters. Our fine-tuned LLMs, called Llama 2-Chat, are optimized for dialogue use cases. Our models outperform open-source chat models on most benchmarks we tested, and based on our human evaluations for helpfulness and safety, may be a suitable substitute for closed-source models. We provide a detailed description of our approach to fine-tuning and safety improvements of Llama 2-Chat in order to enable the community to build on our work and contribute to the responsible development of LLMs.},
   archiveprefix = {arxiv},
   keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language},
-  file = {C:\Users\oskar\Zotero\storage\NQV5U7ZX\Touvron et al. - 2023 - Llama 2 Open Foundation and Fine-Tuned Chat Model.pdf}
+  file = {C\:\\Users\\oskar\\Zotero\\storage\\PQJCXPA5\\Touvron et al. - 2023 - Llama 2 Open Foundation and Fine-Tuned Chat Model.pdf;C\:\\Users\\oskar\\Zotero\\storage\\5BRHXUNL\\2307.html}
 }
 
 @misc{unluChatmapLargeLanguage2023,
@@ -1160,6 +1258,16 @@
   howpublished = {https://arxiv.org/abs/1706.03762v7},
   langid = {english},
   file = {C:\Users\oskar\Zotero\storage\KG8K58TW\Vaswani et al. - 2017 - Attention Is All You Need.pdf}
+}
+
+@misc{VicunaOpenSourceChatbot,
+  title = {Vicuna: {{An Open-Source Chatbot Impressing GPT-4}} with 90\%* {{ChatGPT Quality}} | {{LMSYS Org}}},
+  shorttitle = {Vicuna},
+  urldate = {2023-12-07},
+  abstract = {{$<$}p{$>$}We introduce Vicuna-13B, an open-source chatbot trained by fine-tuning LLaMA on user-shared conversations collected from ShareGPT. Preliminary evaluation ...},
+  howpublished = {https://lmsys.org/blog/2023-03-30-vicuna},
+  langid = {english},
+  file = {C:\Users\oskar\Zotero\storage\7KGZJN5B\2023-03-30-vicuna.html}
 }
 
 @misc{wangSelfInstructAligningLanguage2023,
